# otomo_sim

./: CMakeLists.txt  README.md  package.xml
config/: gazebo_params.yaml
launch/: sim.launch.py
maps/: basement_sim.data  basement_sim.pgm  basement_sim.yaml
sim/: package.xml
sim/worlds/living_room/: living_room.config  living_room.sdf
worlds/: apartment.world  obstacles.sdf
worlds/living_room/: living_room.sdf  model.sdf
